--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  
 }
 
 .App-logo {
@@ -24,7 +25,57 @@
   color: white;
 }
 
+.icon-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: clamp(400px, 80vw, 1200px);
+  margin: auto;
+  justify-content: center;
+}
+.nav-buttons {
+  display: flex;
+  width: fit-content;
+  margin: auto;
+}
+.nav-buttons > * {
+  margin: 5px;
+  background-color: #282c34;
+  color: white;
+  border: 0px;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.class-div {
+  border: 1px solid black;
+  width: 125px;
+  display: grid;
+  justify-items: center;
+  padding: 15px;
+  margin: 1rem;
+  border-radius: 5px;
+  text-align: center;
+  background-color: #323539;
+  color: white;
+}
+.ship-div {
+  border: 1px solid black;
+  width:fit-content;
+  display: grid;
+  justify-items:left;
+  padding: 10px 45px;
+  margin:10% auto;
+  border-radius: 5px;
+  text-align: left;
+  background-color: #323539;
+  color: white;
+}
+
 .App-link {
+  color: #61dafb;
+}
+a {
   color: #61dafb;
 }
 
