--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,7 @@
   padding: 15px;
   margin: 1rem;
   border-radius: 5px;
+  height: 7vh;
   text-align: center;
   background-color: #323539;
   color: white;
@@ -77,6 +78,11 @@
 }
 a {
   color: #61dafb;
+}
+
+.loading-text {
+  text-align: center;
+  margin-top: 15px;
 }
 
 @keyframes App-logo-spin {
